--- a/scrolling/index.html
+++ b/scrolling/index.html
@@ -7,6 +7,10 @@
   <title>Scrolling demo</title>
 </head>
 <body>
+  <script src="../three.min.js"></script>
+  <script src="../OrbitControls.js"></script>
+  <script src="../MTLLoader.js"></script>
+  <script src="../OBJLoader.js"></script>
   <script src="./index.js"></script>
 </body>
 </html>
