adds basic working demo - tree model is buggy/not loading for some reason

--- a/scroll-demo-vue/index.html
+++ b/scroll-demo-vue/index.html
@@ -7,6 +7,10 @@
     <!-- <link rel="stylesheet" href="//resources.newscdn.com.au/cs/video/vjs/stable/build/player.css"> -->
     <!-- <link rel="stylesheet" href="//resources.newscdn.com.au/cs/video/vjs/stable/build/player_controls.css"> -->
     <!-- <script src="//resources.newscdn.com.au/cs/video/vjs/stable/build/player.js"></script> -->
+    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/three.min.js"></script>
+    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/OrbitControls.js"></script>
+    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/MTLLoader.js"></script>
+    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/OBJLoader.js"></script>
   </head>
   <body>
     <div id="app_<%= htmlWebpackPlugin.options.title %>"></div>
