experiementing with objects and materials

--- a/scroll-demo-vue/index.html
+++ b/scroll-demo-vue/index.html
@@ -11,6 +11,8 @@
     <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/OrbitControls.js"></script>
     <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/MTLLoader.js"></script>
     <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/OBJLoader.js"></script>
+    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/FBXLoader.js"></script>
+    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/GLTFLoader.js"></script>
   </head>
   <body>
     <div id="app_<%= htmlWebpackPlugin.options.title %>"></div>
