changes layout to ahve header

--- a/scroll-demo-vue/index.html
+++ b/scroll-demo-vue/index.html
@@ -19,18 +19,30 @@
         position: relative;
         z-index: 100;
         margin: 20px auto;
-        background: rgba(255,255,255, 0.3);
+        background: rgba(0,0,0, 0.3);
+        color: white;
         padding: 20px;
+      }
+      .title {
+        position: relative;
+        height: 100vh;
+      }
+      h1 {
+        position: relative;
+        color: white;
+        top: 10vh;
+        width: 100%;
+        /* transform: translate(0, -110%); */
+        text-align: center;
+        font-size: 100px;
+        z-index: 999999;
       }
     </style>
   </head>
   <body>
-    <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
-    <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
-    <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
-    <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
-    <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
-    <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
+    <div class="title">
+      <h1>The Moon</h1>
+    </div>
     <div id="app_<%= htmlWebpackPlugin.options.title %>"></div>
     <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
     <p>Cillum minim minim eiusmod adipisicing mollit sit laborum dolor ut ex cupidatat. Nostrud occaecat ex reprehenderit dolor proident fugiat incididunt cillum do officia exercitation veniam consectetur occaecat. Esse excepteur velit adipisicing laboris proident fugiat nulla commodo. Ipsum exercitation eiusmod do aute. Nostrud reprehenderit mollit veniam excepteur dolor excepteur. Non commodo laborum anim amet commodo amet occaecat commodo aliqua minim adipisicing duis eu. Nulla magna culpa dolor est et id.</p>
