points to new static locaiton

--- a/scroll-demo-vue/index.html
+++ b/scroll-demo-vue/index.html
@@ -7,12 +7,12 @@
     <!-- <link rel="stylesheet" href="//resources.newscdn.com.au/cs/video/vjs/stable/build/player.css"> -->
     <!-- <link rel="stylesheet" href="//resources.newscdn.com.au/cs/video/vjs/stable/build/player_controls.css"> -->
     <!-- <script src="//resources.newscdn.com.au/cs/video/vjs/stable/build/player.js"></script> -->
-    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/three.min.js"></script>
-    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/OrbitControls.js"></script>
-    <script src="static/MTLLoader.js"></script>
-    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/OBJLoader.js"></script>
-    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/FBXLoader.js"></script>
-    <script src="http://10.68.66.161:7777/projectTest/3dmodels/scripts/GLTFLoader.js"></script>
+    <script src="static/scripts/three.min.js"></script>
+    <script src="static/scripts/OrbitControls.js"></script>
+    <script src="static/scripts/MTLLoader.js"></script>
+    <script src="static/scripts/OBJLoader.js"></script>
+    <script src="static/scripts/FBXLoader.js"></script>
+    <script src="static/scripts/GLTFLoader.js"></script>
     <style>
       p {
         max-width: 600px;
